// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardStatus demo examples Snapshots: basic 1`] = `
.emotion-7 {
  margin-bottom: 1em;
  margin-top: 1em;
  padding-left: 1em;
  padding-right: 1em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #de1b1b;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875em;
  font-weight: 400;
}

.emotion-7 > [role="img"] {
  height: 0.75em;
  margin-right: 0.5em;
  width: 0.75em;
}

.emotion-6 {
  fill: currentcolor;
  font-size: 16px;
  height: 1em;
  width: 1em;
}

.emotion-27::after {
  clear: both;
  content: "";
  display: table;
}

.emotion-27 > * {
  margin-bottom: 1em;
}

@media (min-width:40em) {
  .emotion-27 > * {
    float: left;
    margin-right: 1em;
    width: 47%;
  }
}

@media (min-width:64em) {
  .emotion-27 > *:nth-last-child(n+3),
  .emotion-27 > *:nth-last-child(n+3) ~ * {
    width: 30%;
  }
}

.emotion-8 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  background-color: #ffffff;
  border: 1px solid #ebeff5;
  border-radius: 0.1875em;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2),0 4px 8px 0 rgba(0,0,0,0.2);
  padding-bottom: 0.01em;
  padding-top: 0.01em;
}

.emotion-8 *,
.emotion-8 *::before,
.emotion-8 *::after {
  box-sizing: inherit;
}

.emotion-8:focus {
  box-shadow: 0 0 0 2px #1d5bbf,0 1px 2px 0 rgba(0,0,0,0.2),0 2px 4px 0 rgba(0,0,0,0.2);
}

.emotion-3 {
  margin-bottom: 1em;
  margin-top: 1em;
  padding-left: 1em;
  padding-right: 1em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.emotion-1 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 > [role="img"] {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  margin-right: 0.5em;
  position: relative;
  top: 0.25em;
}

.emotion-0 {
  color: #58606e;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-size: 1.125em;
  font-weight: 700;
  margin: 0;
}

.emotion-5 {
  margin-bottom: 1em;
  margin-top: 1em;
  padding-left: 1em;
  padding-right: 1em;
}

.emotion-5:last-child {
  margin-bottom: 1.5em;
}

.emotion-4 {
  font-size: 0.875em;
  line-height: 1.5;
}

.emotion-16 {
  margin-bottom: 1em;
  margin-top: 1em;
  padding-left: 1em;
  padding-right: 1em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #2a854e;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875em;
  font-weight: 400;
}

.emotion-16 > [role="img"] {
  height: 0.75em;
  margin-right: 0.5em;
  width: 0.75em;
}

.emotion-25 {
  margin-bottom: 1em;
  margin-top: 1em;
  padding-left: 1em;
  padding-right: 1em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #ad5f00;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875em;
  font-weight: 400;
}

.emotion-25 > [role="img"] {
  height: 0.75em;
  margin-right: 0.5em;
  width: 0.75em;
}

<Styled(div)>
  <div
    className="emotion-27"
  >
    <Card>
      <Card>
        <div
          className="emotion-8"
        >
          <CardTitle>
            <CardTitle>
              <div
                className="emotion-3"
              >
                <Styled(div)>
                  <div
                    className="emotion-2"
                  >
                    <Styled(div)>
                      <div
                        className="emotion-1"
                      >
                        <Styled(h3)>
                          <h3
                            className="emotion-0"
                          >
                            Card Title
                          </h3>
                        </Styled(h3)>
                      </div>
                    </Styled(div)>
                  </div>
                </Styled(div)>
              </div>
            </CardTitle>
          </CardTitle>
          <CardBlock>
            <CardBlock>
              <div
                className="emotion-5"
              >
                <Styled(div)>
                  <div
                    className="emotion-4"
                  >
                    
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mattis
  pretium massa. Aliquam erat volutpat. Nulla facilisi.

                  </div>
                </Styled(div)>
              </div>
            </CardBlock>
          </CardBlock>
          <CardStatus
            variant="danger"
          >
            <CardStatus
              variant="danger"
            >
              <div
                className="emotion-7"
              >
                <IconDangerSimple>
                  <Icon
                    rtl={false}
                    size="medium"
                  >
                    <Styled(svg)
                      aria-hidden={true}
                      focusable="false"
                      role="img"
                      rtl={false}
                      size="medium"
                      viewBox="0 0 24 24"
                    >
                      <svg
                        aria-hidden={true}
                        className="emotion-6"
                        focusable="false"
                        role="img"
                        viewBox="0 0 24 24"
                      >
                        <g>
                          <path
                            d="M3.94 20.49h16.118a1 1 0 0 0 .866-1.498l-8.06-13.99a.996.996 0 0 0-1.732-.001L3.074 18.993a.998.998 0 0 0 .867 1.499l-.001-.002z"
                          />
                        </g>
                      </svg>
                    </Styled(svg)>
                  </Icon>
                </IconDangerSimple>
                Unavailable
              </div>
            </CardStatus>
          </CardStatus>
        </div>
      </Card>
    </Card>
    <Card>
      <Card>
        <div
          className="emotion-8"
        >
          <CardTitle>
            <CardTitle>
              <div
                className="emotion-3"
              >
                <Styled(div)>
                  <div
                    className="emotion-2"
                  >
                    <Styled(div)>
                      <div
                        className="emotion-1"
                      >
                        <Styled(h3)>
                          <h3
                            className="emotion-0"
                          >
                            Card Title
                          </h3>
                        </Styled(h3)>
                      </div>
                    </Styled(div)>
                  </div>
                </Styled(div)>
              </div>
            </CardTitle>
          </CardTitle>
          <CardBlock>
            <CardBlock>
              <div
                className="emotion-5"
              >
                <Styled(div)>
                  <div
                    className="emotion-4"
                  >
                    
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mattis
  pretium massa. Aliquam erat volutpat. Nulla facilisi.

                  </div>
                </Styled(div)>
              </div>
            </CardBlock>
          </CardBlock>
          <CardStatus
            variant="success"
          >
            <CardStatus
              variant="success"
            >
              <div
                className="emotion-16"
              >
                <IconSuccessSimple>
                  <Icon
                    rtl={false}
                    size="medium"
                  >
                    <Styled(svg)
                      aria-hidden={true}
                      focusable="false"
                      role="img"
                      rtl={false}
                      size="medium"
                      viewBox="0 0 24 24"
                    >
                      <svg
                        aria-hidden={true}
                        className="emotion-6"
                        focusable="false"
                        role="img"
                        viewBox="0 0 24 24"
                      >
                        <g>
                          <path
                            d="M12 3c4.968 0 9 4.032 9 9s-4.032 9-9 9-9-4.032-9-9 4.032-9 9-9z"
                          />
                        </g>
                      </svg>
                    </Styled(svg)>
                  </Icon>
                </IconSuccessSimple>
                Available
              </div>
            </CardStatus>
          </CardStatus>
        </div>
      </Card>
    </Card>
    <Card>
      <Card>
        <div
          className="emotion-8"
        >
          <CardTitle>
            <CardTitle>
              <div
                className="emotion-3"
              >
                <Styled(div)>
                  <div
                    className="emotion-2"
                  >
                    <Styled(div)>
                      <div
                        className="emotion-1"
                      >
                        <Styled(h3)>
                          <h3
                            className="emotion-0"
                          >
                            Card Title
                          </h3>
                        </Styled(h3)>
                      </div>
                    </Styled(div)>
                  </div>
                </Styled(div)>
              </div>
            </CardTitle>
          </CardTitle>
          <CardBlock>
            <CardBlock>
              <div
                className="emotion-5"
              >
                <Styled(div)>
                  <div
                    className="emotion-4"
                  >
                    
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mattis
  pretium massa. Aliquam erat volutpat. Nulla facilisi.

                  </div>
                </Styled(div)>
              </div>
            </CardBlock>
          </CardBlock>
          <CardStatus
            variant="warning"
          >
            <CardStatus
              variant="warning"
            >
              <div
                className="emotion-25"
              >
                <IconWarningSimple>
                  <Icon
                    rtl={false}
                    size="medium"
                  >
                    <Styled(svg)
                      aria-hidden={true}
                      focusable="false"
                      role="img"
                      rtl={false}
                      size="medium"
                      viewBox="0 0 24 24"
                    >
                      <svg
                        aria-hidden={true}
                        className="emotion-6"
                        focusable="false"
                        role="img"
                        viewBox="0 0 24 24"
                      >
                        <g>
                          <path
                            d="M13.414 2.718l7.868 7.868c.78.78.78 2.047 0 2.828l-7.868 7.868c-.78.78-2.047.78-2.828 0l-7.868-7.868a2.001 2.001 0 0 1 0-2.828l7.868-7.868c.78-.78 2.047-.78 2.828 0z"
                          />
                        </g>
                      </svg>
                    </Styled(svg)>
                  </Icon>
                </IconWarningSimple>
                Warning
              </div>
            </CardStatus>
          </CardStatus>
        </div>
      </Card>
    </Card>
  </div>
</Styled(div)>
`;

exports[`CardStatus demo examples Snapshots: rtl 1`] = `
.emotion-2 {
  fill: currentcolor;
  font-size: 16px;
  height: 1em;
  width: 1em;
}

.emotion-5::after {
  clear: both;
  content: "";
  display: table;
}

.emotion-5 > * {
  margin-bottom: 1em;
}

@media (min-width:40em) {
  .emotion-5 > * {
    float: left;
    margin-right: 1em;
    width: 47%;
  }
}

@media (min-width:64em) {
  .emotion-5 > *:nth-last-child(n+3),
  .emotion-5 > *:nth-last-child(n+3) ~ * {
    width: 30%;
  }
}

.emotion-4 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  background-color: #ffffff;
  border: 1px solid #ebeff5;
  border-radius: 0.1875em;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2),0 4px 8px 0 rgba(0,0,0,0.2);
  padding-bottom: 0.01em;
  padding-top: 0.01em;
}

.emotion-4 *,
.emotion-4 *::before,
.emotion-4 *::after {
  box-sizing: inherit;
}

.emotion-4:focus {
  box-shadow: 0 0 0 2px #1d5bbf,0 1px 2px 0 rgba(0,0,0,0.2),0 2px 4px 0 rgba(0,0,0,0.2);
}

.emotion-1 {
  margin-bottom: 1em;
  margin-top: 1em;
  padding-left: 1em;
  padding-right: 1em;
}

.emotion-1:last-child {
  margin-bottom: 1.5em;
}

.emotion-0 {
  font-size: 0.875em;
  line-height: 1.5;
}

.emotion-3 {
  margin-bottom: 1em;
  margin-top: 1em;
  padding-left: 1em;
  padding-right: 1em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #de1b1b;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875em;
  font-weight: 400;
}

.emotion-3 > [role="img"] {
  height: 0.75em;
  margin-left: 0.5em;
  width: 0.75em;
}

<Styled(div)
  dir="rtl"
>
  <div
    className="emotion-5"
    dir="rtl"
  >
    <ThemeProvider>
      <ThemeProvider>
        <Card>
          <Card>
            <div
              className="emotion-4"
            >
              <CardBlock>
                <CardBlock>
                  <div
                    className="emotion-1"
                  >
                    <Styled(div)>
                      <div
                        className="emotion-0"
                      >
                        
  خدمة الجزر أبجد هوز. حتى على مستوى أسعار العقارات. الغلوتين. لا عقوبة. حتى الرعاية. ولكن الآن تنورة المؤلف والتغذية.

                      </div>
                    </Styled(div)>
                  </div>
                </CardBlock>
              </CardBlock>
              <CardStatus
                variant="danger"
              >
                <CardStatus
                  variant="danger"
                >
                  <div
                    className="emotion-3"
                  >
                    <IconDangerSimple>
                      <Icon
                        rtl={false}
                        size="medium"
                      >
                        <Styled(svg)
                          aria-hidden={true}
                          focusable="false"
                          role="img"
                          rtl={false}
                          size="medium"
                          viewBox="0 0 24 24"
                        >
                          <svg
                            aria-hidden={true}
                            className="emotion-2"
                            focusable="false"
                            role="img"
                            viewBox="0 0 24 24"
                          >
                            <g>
                              <path
                                d="M3.94 20.49h16.118a1 1 0 0 0 .866-1.498l-8.06-13.99a.996.996 0 0 0-1.732-.001L3.074 18.993a.998.998 0 0 0 .867 1.499l-.001-.002z"
                              />
                            </g>
                          </svg>
                        </Styled(svg)>
                      </Icon>
                    </IconDangerSimple>
                    غير متوفره
                  </div>
                </CardStatus>
              </CardStatus>
            </div>
          </Card>
        </Card>
      </ThemeProvider>
    </ThemeProvider>
  </div>
</Styled(div)>
`;
